2005-03-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* configure.in: raise required librsvg version to 2.8.0
	* plug-ins/common/svg.c: change deprecated librsvg api,
	fixes bug #147662.
	
2005-03-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/sparkle.c
	* plug-ins/common/spheredesigner.c
	* plug-ins/common/struc.c
	* plug-ins/common/tileit.c
	* plug-ins/common/warp.c
	* plug-ins/common/whirlpinch.c
	* plug-ins/common/wind.c: handle situation where intersection
	of selection and drawable is empty; progress on bug #155733.

2005-03-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimptransformtool.c
	* app/tools/gimpfliptool.c
	* app/core/gimpdrawabletransform.c: avoid messages and critical
	error when transforming a drawable that does not intersect
	the selection.  

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c: changed time-smoother code to use guint32
	time values externally, guint64 internally. Proper fix for bug
	#164272.

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/actions/dialogs-actions.h: bail out if
	widgets/gimpactiongroup.h has not been included beforehand.

	* app/actions/actions.c: include widgets/gimpactiongroup.h. Fixes
	build with amd64/gcc-4.0 (Debian bug report #300227).

2005-03-21  Sven Neumann  <sven@gimp.org>

	* etc/controllerrc: fixed defaults for mouse wheel controller (bug
	#171083, fix spotted by Michael Schumacher).

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_constructor): disable search for tree
	views so that treeview typeahead doesn't collide with global
	accelerators. Fixes bug #169339 and would suck less if bug #170435
	was fixed.

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-utils.[ch]: changed all transform
	utilities to modify the passed transform matrix instead of
	creating a new one.

	* app/text/gimptextlayer-transform.c
	* app/tools/gimpperspectivetool.c